# cryptox_cpp

./: .gitmodules  CMakeLists.txt  README.md  build-libs.bat
libs/: CMakeLists.txt
libs/cmake/: install-headers.cmake  install_static_libs.cmake  libmdbx-wrapper.cmake  minizip-ng-config.cmake  minizip-ng-options.cmake  simdcomp-wrapper.cmake  sqlite-wrapper.cmake  vbyte-wrapper.cmake  zlib-ng-options.cmake  zstd-wrapper.cmake
tests/: test-gzip.cpp
